deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mldm-agent
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mldm-agent
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      appProtocol: http
